--- a/resume.qmd
+++ b/resume.qmd
@@ -1,12 +1,12 @@
 ---
 layout: cv
-title: Isaac Newtons's CV
+title: Ria Noble's CV
 ---
-# Isaac Newton
-Physicist, Mathematician, Cambridge professor.
+# Ria Noble
+Biostatistics Student
 
 <div id="webaddress">
-<a href="isaac@applesdofall.org">isaac@applesdofall.org</a>
+<a href="nob21003@byui.edu">nob21003@byui.edu</a>
 | <a href="http://en.wikipedia.org/wiki/Isaac_Newton">My wikipedia page</a>
 </div>
 
